src/composer/tests/snapshots/seele__composer__resolve__tests__resolve_submission@submission_needs_2.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/tests/submission_needs_2.yaml
---
Submission(
  id: "needs_2",
  root_directory: "test",
  config: SubmissionConfig(
    id: "needs_2",
    tracing_attribute: None,
    steps: {
      "one": {
        "status": "PENDING",
        "embeds": {},
      },
      "two": {
        "status": "PENDING",
        "embeds": {},
      },
      "three": {
        "status": "PENDING",
        "embeds": {},
      },
      "four": {
        "status": "PENDING",
        "embeds": {},
      },
      "five": {
        "status": "PENDING",
        "embeds": {},
      },
    },
  ),
  root_node: RootTaskNode(
    tasks: [
      TaskNode(
        name: ".one",
        children: [
          TaskNode(
            name: ".two",
            children: [],
            ext: Config(
              action: "seele/noop@1",
              test: 2,
            ),
          ),
          TaskNode(
            name: ".three",
            children: [
              TaskNode(
                name: ".four",
                children: [],
                ext: Config(
                  action: "seele/noop@1",
                  test: 4,
                ),
              ),
              TaskNode(
                name: ".five",
                children: [],
                ext: Config(
                  action: "seele/noop@1",
                  test: 5,
                ),
              ),
            ],
            ext: Config(
              action: "seele/noop@1",
              test: 3,
            ),
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
