src/composer/tests/snapshots/seele__composer__resolve__tests__resolve_submission@submission_nested_sequence_3.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/tests/submission_nested_sequence_3.yaml
---
Submission(
  id: "nested_sequence_3",
  root_directory: "test",
  config: SubmissionConfig(
    id: "nested_sequence_3",
    tracing_attribute: None,
    steps: {
      "one": {
        "tags": None,
        "status": "PENDING",
      },
      "two": {
        "tags": None,
        "status": "PENDING",
        "steps": {
          "two-one": {
            "tags": None,
            "status": "PENDING",
          },
          "two-two": {
            "tags": None,
            "status": "PENDING",
          },
        },
      },
      "three": {
        "tags": None,
        "status": "PENDING",
      },
      "four": {
        "tags": None,
        "status": "PENDING",
        "steps": {
          "four-one": {
            "tags": None,
            "status": "PENDING",
            "steps": {
              "four-one-one": {
                "tags": None,
                "status": "PENDING",
                "steps": {
                  "four-one-one-one": {
                    "tags": None,
                    "status": "PENDING",
                    "steps": {
                      "four-one-one-one-one": {
                        "tags": None,
                        "status": "PENDING",
                        "steps": {
                          "four-one-one-one-one-one": {
                            "tags": None,
                            "status": "PENDING",
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
          "four-two": {
            "tags": None,
            "status": "PENDING",
            "parallel": [
              {
                "tags": None,
                "status": "PENDING",
              },
              {
                "tags": None,
                "status": "PENDING",
                "parallel": [
                  {
                    "tags": None,
                    "status": "PENDING",
                    "parallel": [
                      {
                        "tags": None,
                        "status": "PENDING",
                        "parallel": [
                          {
                            "tags": None,
                            "status": "PENDING",
                            "parallel": [
                              {
                                "tags": None,
                                "status": "PENDING",
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              {
                "tags": None,
                "status": "PENDING",
              },
            ],
          },
          "four-three": {
            "tags": None,
            "status": "PENDING",
            "steps": {
              "four-three-one": {
                "tags": None,
                "status": "PENDING",
              },
            },
          },
        },
      },
    },
  ),
  root_node: RootTaskNode(
    tasks: [
      TaskNode(
        name: ".one",
        children: [
          TaskNode(
            name: ".two",
            children: [
              TaskNode(
                name: ".three",
                children: [
                  TaskNode(
                    name: ".four",
                    children: [],
                    ext: [
                      TaskNode(
                        name: ".four.four-one",
                        children: [
                          TaskNode(
                            name: ".four.four-two",
                            children: [
                              TaskNode(
                                name: ".four.four-three",
                                children: [],
                                ext: [
                                  TaskNode(
                                    name: ".four.four-three.four-three-one",
                                    children: [],
                                    ext: Config(
                                      action: "seele/noop@1",
                                      test: 431,
                                    ),
                                  ),
                                ],
                              ),
                            ],
                            ext: [
                              TaskNode(
                                name: ".four.four-two.0",
                                children: [],
                                ext: Config(
                                  action: "seele/noop@1",
                                  test: 421,
                                ),
                              ),
                              TaskNode(
                                name: ".four.four-two.1",
                                children: [],
                                ext: [
                                  TaskNode(
                                    name: ".four.four-two.1.0",
                                    children: [],
                                    ext: [
                                      TaskNode(
                                        name: ".four.four-two.1.0.0",
                                        children: [],
                                        ext: [
                                          TaskNode(
                                            name: ".four.four-two.1.0.0.0",
                                            children: [],
                                            ext: [
                                              TaskNode(
                                                name: ".four.four-two.1.0.0.0.0",
                                                children: [],
                                                ext: Config(
                                                  action: "seele/noop@1",
                                                  test: 422,
                                                ),
                                              ),
                                            ],
                                          ),
                                        ],
                                      ),
                                    ],
                                  ),
                                ],
                              ),
                              TaskNode(
                                name: ".four.four-two.2",
                                children: [],
                                ext: Config(
                                  action: "seele/noop@1",
                                  test: 423,
                                ),
                              ),
                            ],
                          ),
                        ],
                        ext: [
                          TaskNode(
                            name: ".four.four-one.four-one-one",
                            children: [],
                            ext: [
                              TaskNode(
                                name: ".four.four-one.four-one-one.four-one-one-one",
                                children: [],
                                ext: [
                                  TaskNode(
                                    name: ".four.four-one.four-one-one.four-one-one-one.four-one-one-one-one",
                                    children: [],
                                    ext: [
                                      TaskNode(
                                        name: ".four.four-one.four-one-one.four-one-one-one.four-one-one-one-one.four-one-one-one-one-one",
                                        children: [],
                                        ext: Config(
                                          action: "seele/noop@1",
                                          test: 4111111,
                                        ),
                                      ),
                                    ],
                                  ),
                                ],
                              ),
                            ],
                          ),
                        ],
                      ),
                    ],
                  ),
                ],
                ext: Config(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: [
              TaskNode(
                name: ".two.two-one",
                children: [
                  TaskNode(
                    name: ".two.two-two",
                    children: [],
                    ext: Config(
                      action: "seele/noop@1",
                      test: 22,
                    ),
                  ),
                ],
                ext: Config(
                  action: "seele/noop@1",
                  test: 21,
                ),
              ),
            ],
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
