src/composer/tests/snapshots/seele__composer__resolve__tests__resolve_submission@submission_simple.yaml.snap
---
source: src/composer/resolve.rs
expression: submission
input_file: src/composer/tests/submission_simple.yaml
---
Submission(
  id: "simple",
  root_directory: "test",
  config: SubmissionConfig(
    id: "simple",
    tracing_attribute: None,
    steps: {
      "one": {
        "status": "PENDING",
      },
      "two": {
        "status": "PENDING",
      },
      "three": {
        "status": "PENDING",
      },
    },
  ),
  root_node: RootTaskNode(
    tasks: [
      TaskNode(
        name: ".one",
        children: [
          TaskNode(
            name: ".two",
            children: [
              TaskNode(
                name: ".three",
                children: [],
                ext: Config(
                  action: "seele/noop@1",
                  test: 3,
                ),
              ),
            ],
            ext: Config(
              action: "seele/noop@1",
              test: 2,
            ),
          ),
        ],
        ext: Config(
          action: "seele/noop@1",
          test: 1,
        ),
      ),
    ],
  ),
)
